feat: apply auth to container and cli client
