# server/src/api/routes/auth.js
@@ -1,13 +1,13 @@
 import { Router } from 'express'
 import passport from 'passport'
 
-import { genJwt } from '../../utils/auth.js'
+import { genJWT } from '../../utils/auth.js'
 
 const router = Router()
 
 async function issueToken(req, res) {
   const { user } = req
-  const token = await genJwt({
+  const token = await genJWT({
     _id: user.id,
     username: user.username,
     email: user.email,
